tests/baselines/reference/ambientExternalModuleInsideNonAmbientExternalModule.errors.txt
==== tests/cases/conformance/ambient/ambientExternalModuleInsideNonAmbientExternalModule.ts (1 errors) ====
    export declare module "M" { }
                          ~~~
!!! error TS2435: Ambient external modules cannot be nested in other modules.